--- a/ReactJSDotNetRaven/ReactJSDotNetRaven.csproj
+++ b/ReactJSDotNetRaven/ReactJSDotNetRaven.csproj
@@ -186,6 +186,8 @@
     <Content Include="packages.config" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
+    <Content Include="Scripts\showdown.js" />
+    <Content Include="Scripts\showdown.min.js" />
     <Content Include="Views\Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -218,6 +220,7 @@
     <Content Include="Scripts\jquery-2.2.3.min.js" />
     <Content Include="Web.config" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Scripts\Tutorial.jsx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
