--- a/ReactJSDotNetRaven/packages.config
+++ b/ReactJSDotNetRaven/packages.config
@@ -27,6 +27,7 @@
   <package id="React.Core" version="2.5.0" targetFramework="net452" />
   <package id="React.Web" version="2.5.0" targetFramework="net452" />
   <package id="React.Web.Mvc4" version="2.5.0" targetFramework="net452" />
+  <package id="showdown" version="0.9" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
