--- a/ReactJSDotNetRaven/packages.config
+++ b/ReactJSDotNetRaven/packages.config
@@ -24,6 +24,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="MsieJavaScriptEngine" version="1.7.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="RavenDB.Client" version="3.0.30153" targetFramework="net452" />
   <package id="React.Core" version="2.5.0" targetFramework="net452" />
   <package id="React.Web" version="2.5.0" targetFramework="net452" />
   <package id="React.Web.Mvc4" version="2.5.0" targetFramework="net452" />
