--- a/ReactJSDotNetRaven/bin/ReactJSDotNetRaven.dll.config
+++ b/ReactJSDotNetRaven/bin/ReactJSDotNetRaven.dll.config
@@ -6,6 +6,10 @@
 		<section name="v8" type="JavaScriptEngineSwitcher.V8.Configuration.V8Configuration, JavaScriptEngineSwitcher.V8" /><section name="msie" type="JavaScriptEngineSwitcher.Msie.Configuration.MsieConfiguration, JavaScriptEngineSwitcher.Msie" /></sectionGroup>
 	</configSections>
 
+  <connectionStrings>
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MvcPWy-20140807072429.mdf;Initial Catalog=aspnet-MvcPWy-20140807072429;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="RavenDb" connectionString="Url=http://localhost:8080;Database=Comments" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
